<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mimo</string>
    <string name="hello">Hello World, SoftwarePassionView!</string>
    <string name="main_no_items">No orders to display</string>
    <string name="title_create">Detail/ Edit Activity</string>
    <string name="icon_name">-- please choose activity icon --</string>
    <string name="label_title_dashboard">Dashboard</string>
    <string name="label_title_list">List of Event</string>
    <string name="label_title_detail">Detail Event</string>
    <string name="label_title_add">Add Event</string>
    <string name="label_title_edit">Edit Event</string>
    <string name="label_title_biz_list">Biz Location</string>
    
    <!-- form setting in layout detail -->
    
    <string name="label_field_activity_name">Name</string>
    <string name="hint_field_activity_name">your activity name</string>
    <string name="label_field_description">Description</string>
    <string name="hint_field_description">your activity description</string>
    <string name="label_field_startdate">Start Date:</string>
    <string name="hint_field_startdate">Date</string>
    <string name="label_field_starttime">Start Time:</string>
    <string name="hint_field_starttime">Time</string>
    <string name="label_field_enddate">End Date:</string>
    <string name="hint_field_enddate">Date</string>
    <string name="label_field_endtime">End Time:</string>
    <string name="hint_field_endtime">Time</string>
    <string name="hint_field_lat">latitude</string>
    <string name="hint_field_lng">longtitude</string>
    <string name="location">Location</string>    
    
    <!-- button -->    
    <string name="button_edit">Edit</string>
    <string name="button_back">Back</string>
    <string name="button_submit">Submit</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    
    <!-- search functionality -->
    <string name="search_label">Dictionary</string>
    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search the dictionary</string>
    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>
    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of words</string>
    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Use the search box in the Action Bar to look up a word</string>
    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
      <item quantity="one">%1$d result for \"%2$s\": </item>
      <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>
    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>
</resources>
