<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- Title Area on top -->
    <LinearLayout
	    android:id="@+id/layout_form"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ababab" android:orientation="vertical">
        <LinearLayout android:layout_height="wrap_content" android:background="#ababab" android:layout_width="fill_parent" android:orientation="vertical">
            <LinearLayout 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:background="@drawable/nav"  
                android:orientation="horizontal">
                <ImageButton android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:src="@drawable/title_home_default" 
                    android:background="@null"
                    android:id="@+id/home_button">
                </ImageButton>
                <ImageView android:id="@+id/image_separator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/separator">
                </ImageView>
                
                <TextView android:id="@+id/label_title" 
                    android:gravity="center|center_vertical" 
                    android:text="@string/label_title_detail"
                    android:textStyle="bold" 
                    android:layout_width="fill_parent" 
                    android:layout_height="fill_parent">
                </TextView>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/hidden_value" android:visibility="gone">
                </TextView>
            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:orientation="horizontal" android:background="@drawable/sidebar" android:layout_width="fill_parent">
                <ImageButton android:id="@+id/icon_activity" android:paddingLeft="5dp" android:visibility="visible" android:paddingRight="15dp" android:layout_height="wrap_content" android:background="@null" android:src="@drawable/marker_default" android:layout_width="wrap_content" android:paddingTop="10dp"></ImageButton>
                <TextView android:layout_marginBottom="0dip" 
                  android:textSize="15dp" 
                  android:textColor="#000000" 
                  android:layout_marginTop="0dip" 
                  android:id="@+id/icon_label" 
                  android:textStyle="bold" 
                  android:layout_width="wrap_content" 
                  android:layout_weight="2" 
                  android:layout_height="wrap_content" 
                  android:text="@string/icon_name"
                  android:layout_gravity="center">
                </TextView>
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <!-- <TextView android:textSize="15dp" android:id="@+id/hidden_value" android:layout_width="wrap_content"></TextView> -->
                <TextView 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:id="@+id/hidden_value" 
                    android:visibility="gone">
                </TextView> 
            </LinearLayout>
        </LinearLayout>
      </LinearLayout>

      <!-- Form entry on top -->

      <ScrollView 
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:fillViewport="true"
          android:clipChildren="true"
          android:fadeScrollbars="true">
          <LinearLayout 
              android:background="#ffffff"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content">
			        <TextView  
			            android:textColor="#000000"
			            android:layout_width="fill_parent" 
			            android:layout_height="wrap_content" 
			            android:layout_gravity="center_horizontal"
			            android:layout_marginLeft="8dip"
			            android:layout_marginRight="8dip"
			            android:text="@string/label_field_activity_name"
			            android:id="@+id/labelName"/>
			        <TextView  
			            android:textColor="#000000"
			            android:layout_width="fill_parent" 
			            android:layout_height="wrap_content" 
			            android:layout_gravity="center_horizontal"
			            android:layout_marginLeft="8dip"
			            android:layout_marginRight="8dip"
			            android:text="@string/label_field_description"
			            android:id="@+id/labelDescription"/>
			        <TextView android:text="Start :" 
			            android:layout_marginLeft="8dip" 
			            android:textColor="#000000"
			            android:layout_marginRight="8dip" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/labelStart"></TextView>
	            <TextView android:text="End :" 
	                android:textColor="#000000"
	                android:layout_marginLeft="8dip" android:layout_marginRight="8dip" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/labelEnd"></TextView>
	            <TextView android:layout_marginLeft="8dip"
	                android:textColor="#000000"
	                android:layout_marginRight="8dip" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/location" android:id="@+id/labelLocation"></TextView>
              <LinearLayout 
				        android:orientation="horizontal"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:layout_gravity="left"
				        android:layout_weight="2" android:layout_margin="5dip">
				        <Button
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:layout_gravity="right"
				            android:layout_weight="1"
				            android:id="@+id/btn_edit" android:text="@string/button_edit"/>
				        <Button
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:layout_gravity="right"
				            android:layout_weight="1" android:text="@string/button_back" android:id="@+id/btn_back"/>
				        
		          </LinearLayout>
		          <Button
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1" 
                    android:text="@string/button_delete" 
                    android:id="@+id/btn_delete" 
                    android:layout_width="fill_parent"
                    android:layout_margin="5dip"/>
	          </LinearLayout>
	      </ScrollView>
    </LinearLayout>
</LinearLayout>
